# loreforge

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: bestiary.json  roster.json
data/raw/: bestiary.json  mutated_animals.txt  robots.txt
infra/: main.bicep  main.bicepparam
infra/db/: schema.sql
specs/: 00_overview.md  01_raw_sources.md  02_canonical_schema.md  03_pipeline_worker.md  04_text_parser.md  STATUS.md
src/: worker.py
src/ingest/: base.py  bestiary.py  roster.py  text_table.py
src/models/: canonical.py
src/output/: db_writer.py
src/validate/: schema.py
tests/: conftest.py  test_bestiary.py  test_roster.py  test_schema.py  test_text_table.py
